# acres

./: .envrc  .gitignore  .ready-tmux  Cargo.toml  LICENSE  Makefile  README.md  demo.tape
.config/: config.json5
.github/workflows/: cd.yml  ci.yml
acres/: Cargo.toml
acres-cli/: Cargo.toml  README.md
acres-cli/src/: logging.rs  main.rs
acres-cli/tests/: artwork.rs  artworks.rs  artworks_search.rs  cli.rs
acres-tui/: Cargo.toml
acres-tui/.config/: config.json5
acres-tui/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  logging.rs  main.rs
acres-tui/src/components/: acres.rs  artworks.rs  artworks_list.rs  ascii.rs  home.rs  iiif.rs  image_to_ascii_builder.rs
acres/src/: api.rs  common.rs  config.rs  lib.rs
acres/src/artworks/: artwork.rs  artwork_builder.rs  artwork_info.rs  artwork_list.rs  collection.rs  collection_builder.rs  collection_query_params.rs  list.rs  list_artworks.rs  list_op.rs  list_op_query_params.rs  manifest.rs  mod.rs  search.rs  search_builder.rs  search_query_params.rs
acres/src/iiif/: iiif_builder.rs  mod.rs
aic/: Cargo.toml
aic-cli/: Cargo.toml
aic-cli/src/: main.rs
aic-cli/tests/: cli.rs
aic-tui/: Cargo.toml  Makefile
aic-tui/src/: ascii_art.rs  config.rs  main.rs
aic-tui/src/aic/: api.rs
aic-tui/src/components/: artworks_list.rs  home.rs
aic/src/: artworks.rs  config.rs  lib.rs
ascii-art/: Cargo.toml
ascii-art/src/: lib.rs
iiif/: Cargo.toml  Makefile
iiif/src/: base_uri.rs  errors.rs  image_request.rs  image_request_builder.rs  information_request.rs  lib.rs  uri.rs
image-to-ascii-builder/: Cargo.toml
image-to-ascii-builder/src/: ascii.rs  lib.rs
scratch/: README.md
src/: action.rs  aic.rs  app.rs  ascii_art.rs  cli.rs  components.rs  config.rs  iiif.rs  main.rs
src/aic/: api.rs  iiif.rs
src/components/: artworks_list.rs  home.rs
