[package]
name = "acres-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aic = { path = "../aic" }
clap = { version = "4.5.37", features = ["cargo", "derive"] }
eyre = "0.6.12"
tokio = { version = "1.44.2", features = ["rt", "macros", "full"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
serde_json = "1.0.140"
