[package]
name = "acres-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
acres = { path = "../acres", features = ["ascii-art"] }
clap = { version = "4.5.37", features = ["cargo", "derive"] }
color-eyre = "0.6.4"
eyre = "0.6.12"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["rt", "macros", "full"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
image = "0.25.6"
predicates = "3.1.3"
serde_json = "1.0.140"
