[package]
name = "acres-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
acres = { path = "../acres" }
clap = { version = "4.5.37", features = ["cargo", "derive"] }
clap-stdin = "0.7.0"
color-eyre = "0.6.4"
crossterm = "0.29.0"
eyre = "0.6.12"
iiif = { path = "../iiif" }
reqwest = "0.12.23"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["rt", "macros", "full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
serde_json = "1.0.140"
wiremock = "0.6.5"
