[package]
name = "acres-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
acres = { path = "../acres" }
ansi-to-tui = "7.0.0"
better-panic = "0.3.0"
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
clap-stdin = "0.7.0"
color-eyre = "0.6.5"
config = "0.15.18"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.31"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.177"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
signal-hook = "0.3.18"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde"] }

[build-dependencies]
anyhow = "1.0.100"
vergen-gix = { version = "1.0.9", features = ["build", "cargo"] }

