[package]
name = "acres"
version = "0.1.0"
edition = "2024"
description = "Simple and ergonomic access to the Art Institute of Chicago's public APIs."
keywords = []
categories = []
repository = "https://github.com/dylan-stark/acres"
authors = [ "Dylan Stark <dylan.stark@gmail.com>" ]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
config = "0.15.11"
directories = "6.0.0"
iiif = { path = "../iiif" }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = { version = "0.1.41" }
url = { version = "2.5.7", features = ["serde"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
predicates = "3.1.3"
tokio = { version = "1.44.2", features = ["full"] }
wiremock = "0.6.3"

