[package]
name = "aic"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.11"
directories = "6.0.0"
eyre = "0.6.12"
lazy_static = "1.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
wiremock = "0.6.3"
