[package]
name = "aic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
config = "0.15.11"
directories = "6.0.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "macros"] }

[dev-dependencies]
predicates = "3.1.3"
tokio = { version = "1.44.2", features = ["full"] }
wiremock = "0.6.3"
