[package]
name = "iiif"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
url = { version = "2.5.7", features = ["serde"] }
