[package]
name = "image-to-ascii-builder"
version = "0.1.0"
edition = "2024"
description = "Builder for working with the image-to-ascii crate."
keywords = []
categories = []
repository = "https://github.com/dylan-stark/acres"
authors = [ "Dylan Stark <dylan.stark@gmail.com>" ]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
# indicatif is pinned here to match image-to-ascii
indicatif = "0.18.0"
# image is pinned here to match image-to-ascii
image = "0.24.2"
image-to-ascii = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
